--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>tr.com.serkanozal</groupId>
   	<artifactId>jillegal-agent</artifactId>
-  	<version>1.1.0-RELEASE</version>
+  	<version>2.0</version>
     <name>Jillegal</name>
     <url>https://github.com/serkan-ozal/jillegal-agent</url>
     
@@ -65,6 +65,7 @@
 							<Boot-Class-Path>jillegal-agent-${version}.jar</Boot-Class-Path>
 							<Can-Retransform-Classes>true</Can-Retransform-Classes>
 							<Can-Redefine-Classes>true</Can-Redefine-Classes>
+							<Can-Set-Native-Method-Prefix>true</Can-Set-Native-Method-Prefix>
             			</manifestEntries>
          		 	</archive>
         		</configuration>
